--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="retrieve_image">Retrieve Image</string>
     <string name="image_retrieve">Image Retrieve</string>
     <string name="submit">Submit</string>
+    <string name="todo">TODO</string>
 </resources>
