--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="image_retrieve">Image Retrieve</string>
     <string name="submit">Submit</string>
     <string name="todo">TODO</string>
+    <string name="splash_image">splash image</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
